--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\admin\eclipse-workspace\frameworkdesign\testng1.xml</span>
+                    <span>C:\Users\admin\eclipse-workspace\frameworkdesign\listenertestng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="tests.TestNG3" class="method navigator-link" hash-for-method="test01">test01</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,22 +117,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="tests.TestNG4" class="method navigator-link" hash-for-method="test01(1, 2)">test01(1, 2)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="tests.TestNG3" class="method navigator-link" hash-for-method="test02">test02</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="tests.TestNG4" class="method navigator-link" hash-for-method="test02(-1, 0)">test02(-1, 0)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="tests.TestNG4" class="method navigator-link" hash-for-method="test02(3, 4)">test02(3, 4)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="tests.TestNG4" class="method navigator-link" hash-for-method="test02(1, 2)">test02(1, 2)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="tests.TestNG3" class="method navigator-link" hash-for-method="test03">test03</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -133,42 +137,44 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-passed">
+          <div class="suite-Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">tests.TestNG4</span>
+              <img src="failed.png"/>
+              <span class="class-name">tests.TestNG3</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test01(1, 2)">
-                  </a> <!-- test01(1, 2) -->
+                  <a name="test01">
+                  </a> <!-- test01 -->
                   <span class="method-name">test01</span>
-                  <span class="parameters">(1,2)</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at tests.TestNG3.test01(TestNG3.java:12)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
+... Removed 29 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-failed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">tests.TestNG3</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="test02">
+                  </a> <!-- test02 -->
+                  <span class="method-name">test02</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="test02(-1, 0)">
-                  </a> <!-- test02(-1, 0) -->
-                  <span class="method-name">test02</span>
-                  <span class="parameters">(-1,0)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test02(3, 4)">
-                  </a> <!-- test02(3, 4) -->
-                  <span class="method-name">test02</span>
-                  <span class="parameters">(3,4)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test02(1, 2)">
-                  </a> <!-- test02(1, 2) -->
-                  <span class="method-name">test02</span>
-                  <span class="parameters">(1,2)</span>
+                  <a name="test03">
+                  </a> <!-- test03 -->
+                  <span class="method-name">test03</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -176,18 +182,19 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\admin\eclipse-workspace\frameworkdesign\testng1.xml</span>
+            <span class="header-content">C:\Users\admin\eclipse-workspace\frameworkdesign\listenertestng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;utilities.TestListener&quot;/&gt;
+  &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
-    &lt;parameter name=&quot;param1&quot; value=&quot;1&quot;/&gt;
-    &lt;parameter name=&quot;param2&quot; value=&quot;2&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.TestNG4&quot;/&gt;
+      &lt;class name=&quot;tests.TestNG3&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -227,28 +234,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test01')
-data.setCell(0, 2, 'tests.TestNG4')
-data.setCell(0, 3, 41);
+data.setCell(0, 2, 'tests.TestNG3')
+data.setCell(0, 3, 43);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'test02')
-data.setCell(1, 2, 'tests.TestNG4')
-data.setCell(1, 3, 4);
+data.setCell(1, 1, 'test03')
+data.setCell(1, 2, 'tests.TestNG3')
+data.setCell(1, 3, 9);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'test02')
-data.setCell(2, 2, 'tests.TestNG4')
-data.setCell(2, 3, 3);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'test02')
-data.setCell(3, 2, 'tests.TestNG4')
-data.setCell(3, 3, 3);
+data.setCell(2, 2, 'tests.TestNG3')
+data.setCell(2, 3, 2);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 51 ms</span>
+              <span class="suite-total-time">Total running time: 54 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -274,22 +277,20 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.TestNG4</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.TestNG3</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">test01(1, 2)</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">test01</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">test02(1, 2)</span>
-                <span class="method-start">62 ms</span>
+                <span class="method-name">test02</span>
+                <span class="method-start">57 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">test02(3, 4)</span>
-                <span class="method-start">70 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test02(-1, 0)</span>
-                <span class="method-start">77 ms</span>
+                <span class="method-name">test03</span>
+                <span class="method-start">64 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
